--- a/home/linca/dotfiles/waybar/style.css
+++ b/home/linca/dotfiles/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+  font-family: FontAwesome, Roboto, Helvetica, Arial, Maple Mono NF CN, sans-serif;
   font-size: 11px;
   min-height: 0;
 }
